[gd_scene load_steps=5 format=3 uid="uid://dumiogewe3lma"]

[ext_resource type="Script" path="res://scripts/background.gd" id="1_bg62f"]
[ext_resource type="Texture2D" uid="uid://b7qmgbsb6eh38" path="res://textures/background.png" id="2_gnqxg"]
[ext_resource type="Texture2D" uid="uid://bb1atg68oc67m" path="res://textures/midground.png" id="3_b6cqw"]
[ext_resource type="PackedScene" uid="uid://krcob3k02sbi" path="res://scenes/wall.tscn" id="4_t28s4"]

[node name="Background" type="Node2D"]
script = ExtResource("1_bg62f")

[node name="background1" type="Area2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="background1"]
modulate = Color(0.0581956, 0.254608, 0.347791, 1)
position = Vector2(640, 360)
texture = ExtResource("2_gnqxg")

[node name="background2" type="Area2D" parent="."]
modulate = Color(0.500611, 0.863867, 0.571383, 1)

[node name="Sprite2D" type="Sprite2D" parent="background2"]
position = Vector2(640, 360)
texture = ExtResource("3_b6cqw")

[node name="Sprite2D2" type="Sprite2D" parent="background2"]
position = Vector2(640, -360)
rotation = -6.28319
texture = ExtResource("3_b6cqw")

[node name="wall1" parent="." instance=ExtResource("4_t28s4")]
position = Vector2(-336, 8)

[node name="wall2" parent="." instance=ExtResource("4_t28s4")]
position = Vector2(1664, -32)
scale = Vector2(-1, 1)
